@@ -1,19 +1,20 @@
 package com.peaslimited.shoppeas.repository.implementation;
 
 import com.google.api.core.ApiFuture;
-import com.google.cloud.firestore.DocumentReference;
-import com.google.cloud.firestore.DocumentSnapshot;
-import com.google.cloud.firestore.Firestore;
-import com.google.cloud.firestore.QuerySnapshot;
-import com.peaslimited.shoppeas.dto.ConsumerAccountDTO;
+import com.google.cloud.firestore.*;
 import com.peaslimited.shoppeas.dto.ProductDTO;
+import com.peaslimited.shoppeas.dto.WholesalerDTO;
 import com.peaslimited.shoppeas.dto.WholesalerProductDTO;
+import com.peaslimited.shoppeas.dto.WholesalerProductDetailsDTO;
+import com.peaslimited.shoppeas.model.Product;
+import com.peaslimited.shoppeas.model.WholesalerAddress;
 import com.peaslimited.shoppeas.model.WholesalerProducts;
 import com.peaslimited.shoppeas.repository.WholesalerProductRepository;
 import com.peaslimited.shoppeas.service.ProductService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
@@ -21,6 +22,7 @@ import java.util.stream.Collectors;
 
 @Repository
 public class WholesalerProductRepositoryImpl implements WholesalerProductRepository {
+
     private final String COLLECTION = "wholesaler_products";
 
     @Autowired
@@ -31,26 +33,83 @@ public class WholesalerProductRepositoryImpl implements WholesalerProductReposit
 
     @Override
     // Fetch wholesaler products by uen
-    public List<WholesalerProducts> findByUEN(String uen) throws ExecutionException, InterruptedException {
-        QuerySnapshot snapshot = firestore.collection(COLLECTION).whereEqualTo("uen", uen).get().get();
+    public List<Product> findByUEN(String uen) throws ExecutionException, InterruptedException {
+        QuerySnapshot snapshot = firestore.collection(COLLECTION).whereEqualTo("uen", uen).whereEqualTo("active", true).get().get();
 
-        return snapshot.getDocuments().stream()
+        List<String> products = snapshot.getDocuments().stream()
                 .map(doc -> doc.toObject(WholesalerProducts.class))
+                .map(WholesalerProducts::getPid)
+                .toList();
+
+        List<DocumentReference> docRefs = products.stream()
+                .map(pid -> firestore.collection("products").document(pid))
+                .toList();
+
+        List<DocumentSnapshot> productDocs = firestore.getAll(docRefs.toArray(new DocumentReference[0])).get();
+
+        return productDocs.stream()
+                .filter(DocumentSnapshot::exists)
+                .map(doc -> {
+                    Product product = doc.toObject(Product.class);
+                    assert product != null;
+                    product.setPid(doc.getId());  // Assuming Product class has setId method
+                    return product;
+                })
                 .collect(Collectors.toList());
     }
 
     // Fetch products by their PID
     @Override
-    public List<WholesalerProductDTO> findByPid(String pid) throws ExecutionException, InterruptedException {
+    public List<WholesalerProductDetailsDTO> findByPid(String pid) throws ExecutionException, InterruptedException {
         // Query Firestore to get all wholesaler products with the given PID
         QuerySnapshot snapshot = firestore.collection(COLLECTION)
                 .whereEqualTo("pid", pid)
+                .whereEqualTo("active", true)
                 .get().get();
 
-        // Map each matching document to a WholesalerProductDTO object
-        return snapshot.getDocuments().stream()
-                .map(doc -> doc.toObject(WholesalerProductDTO.class))
-                .collect(Collectors.toList());
+        List<WholesalerProducts> wholesalerProducts = snapshot.getDocuments().stream()
+                .map(doc -> doc.toObject(WholesalerProducts.class))
+                .toList();
+
+        List<String> uens = snapshot.getDocuments().stream()
+                .map(doc -> doc.toObject(WholesalerProducts.class))
+                .map(WholesalerProducts::getUen)
+                .toList();
+
+        // Get wholesaler info
+        CollectionReference wholesalerCollection = firestore.collection("wholesaler");
+        Query wholesalerQuery = wholesalerCollection.whereIn("uen", uens);
+        QuerySnapshot productSnapshot = wholesalerQuery.get().get();
+        List<WholesalerDTO> wholesalers = productSnapshot.getDocuments().stream()
+                .map(doc -> doc.toObject(WholesalerDTO.class))  // Replace Product.class with your actual Product class
+                .toList();
+
+        // Get wholesaler address info
+        List<DocumentReference> wholesalerAddressRefs = wholesalerProducts.stream()
+                .map(doc -> firestore.collection("wholesaler_address").document(doc.getUen()))
+                .toList();
+        List<DocumentSnapshot> wholesalerAddressDocs = firestore.getAll(wholesalerAddressRefs.toArray(new DocumentReference[0])).get();
+
+        List<WholesalerAddress> wholesalerAddresses = wholesalerAddressDocs.stream()
+                .filter(DocumentSnapshot::exists)
+                .map(doc -> doc.toObject(WholesalerAddress.class))
+                .toList();
+
+        // Combine product and wholesaler data into DTOs
+        List<WholesalerProductDetailsDTO> wholesalerList = new ArrayList<>();
+
+        for (int i = 0; i < wholesalerProducts.size(); i++) {
+            wholesalerList.add(new WholesalerProductDetailsDTO(
+                    wholesalers.get(i).getName(),
+                    wholesalers.get(i).getUEN(),
+                    wholesalerAddresses.get(i).getStreet_name(),
+                    wholesalerProducts.get(i).getStock(),
+                    wholesalerProducts.get(i).getPrice(),
+                    wholesalers.get(i).getRating()
+            ));
+        }
+
+        return wholesalerList;
     }
 
     @Override
@@ -89,7 +148,9 @@ public class WholesalerProductRepositoryImpl implements WholesalerProductReposit
 
     @Override
     public void deleteWholesalerProduct(String swpid) {
-        firestore.collection(COLLECTION).document(swpid).delete();
+        // Update an existing document
+        DocumentReference docRef = firestore.collection(COLLECTION).document(swpid);
+        docRef.update("active", false);
     }
 
     @Override
@@ -103,8 +164,5 @@ public class WholesalerProductRepositoryImpl implements WholesalerProductReposit
 
         return product.getName();
     }
-
-
-
 
 }
